--- a/README.html
+++ b/README.html
@@ -7,7 +7,7 @@
 <h1 dir=rtl>من امیرعلی رحیمی هستم</h1>
 <h2 dir=rtl>دانشجوی دانشگاه اصفهان و رشته مهندسی کامپیوتر</h2>
 <h3 dir=rtl>ورودی سال 1402 نیمسال اول</h3>
-<h3 dir=rtl>به پنل من خوش آمدید</h3>
+<h3 dir=rtl>به سایت من خوش آمدید</h3>
 <p style="color:red;" dir=rtl>من متولد 11 اسفند سال 1384 هستم.به فعالیت های گوناگونی مثل بسکتبال، نقاشی، برنامه نویسی وب و دسکتاپ و کار های دیگری هم علاقه دارم.</p>
 <img src="me.jpg" width="300px" height="300px">
 </body>
